samples/_failures_safe/1761168714_967cdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_126498c3.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_126498c3.c:167:45: error: missing terminating " character
  167 |         "NUMBER", "IDENTIFIER", "OPERATOR", "
      |                                             ^
./samples/SAFE/__tmp_126498c3.c:167:9: error: expected expression at end of input
  167 |         "NUMBER", "IDENTIFIER", "OPERATOR", "
      |         ^~~~~~~~
./samples/SAFE/__tmp_126498c3.c:167:9: error: expected declaration or statement at end of input
